shop navbar commit

--- a/landing_page.html
+++ b/landing_page.html
@@ -125,94 +125,95 @@
 
 <!--reviews section-->
 <div class="review-container">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <div class="box front">
-                                <img src="/Website Assests/batman.jpg"  alt="...">
-                                <h2>Cherakye Lopez</h2>
-                                <h4>star count</h4>
-                             </div>
-                            <div class="box back">
-                                <span class="review-quote"></span>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam suscipit atque accusamus, nobis totam eos?</p>
-                            </div>
+    <div class="carousel-inner">
+
+        <div class="carousel-item active">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="box front">
+                            <img src="/Website Assests/batman.jpg"  alt="...">
+                            <h2>Cherakye Lopez</h2>
+                            <h4>star count</h4>
+                        </div>
+                        <div class="box back">
+                            <span class="review-quote"></span>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam suscipit atque accusamus, nobis totam eos?</p>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <div class="box front">
-                                <img src="/Website Assests/Superman.jpg"  alt="...">
-                                <h2>Nelson Reyes</h2>
-                                <h4>star count</h4>
-                            </div>
-                            <div class="box back">
-                                 <span class="review-quote"></span>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis dolore vero necessitatibus labore sed cum mollitia fugiat rem incidunt!</p>
-                            </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="box front">
+                            <img src="/Website Assests/Superman.jpg"  alt="...">
+                            <h2>Nelson Reyes</h2>
+                            <h4>star count</h4>
+                        </div>
+                        <div class="box back">
+                            <span class="review-quote"></span>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis dolore vero necessitatibus labore sed cum mollitia fugiat rem incidunt!</p>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <div class="box front">
-                                <img src="/Website Assests/WonderWoman.jpg"  alt="...">
-                                <h2>Sarah Read</h2>
-                                <h4>star count</h4>
-                            </div>
-                            <div class="box back">
-                                <span class="review-quote"></span>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, officiis.</p>
-                            </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="box front">
+                            <img src="/Website Assests/WonderWoman.jpg"  alt="...">
+                            <h2>Sarah Read</h2>
+                            <h4>star count</h4>
+                        </div>
+                        <div class="box back">
+                            <span class="review-quote"></span>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, officiis.</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="card">
-                                <div class="box front">
-                                    <img src="/Website Assests/flash.jpg"  alt="...">
-                                    <h2>Deryshelle Crews</h2>
-                                    <h4>star count</h4>
-                                 </div>
-                                <div class="box back">
-                                    <span class="review-quote"></span>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perferendis, blanditiis corrupti fuga nobis id ad nisi eum illum vel.</p>
-                                </div>
-                            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="box front">
+                            <img src="/Website Assests/MartianManhunter.jpg"  alt="...">
+                            <h2>Deryshelle Crews</h2>
+                            <h4>star count</h4>
                         </div>
-                        <div class="col-lg-4">
-                            <div class="card">
-                                <div class="box front">
-                                    <img src="/Website Assests/hawkman.jpg"  alt="...">
-                                    <h2>Jazmin Lopez-Ortiz</h2>
-                                    <h4>star count</h4>
-                                </div>
-                                <div class="box back">
-                                     <span class="review-quote"></span>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore accusantium nostrum ipsum, esse id quaerat dolore quos a nesciunt aliquam nihil veniam ipsam maxime officia facere quasi distinctio eos dolorem.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="card">
-                                <div class="box front">
-                                    <img src="/Website Assests/aquaman.jpg"  alt="...">
-                                    <h2>Andreya Bryson</h2>
-                                    <h4>star count</h4>
-                                </div>
-                                <div class="box back">
-                                    <span class="review-quote"></span>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, officiis.</p>
-                                </div>
-                            </div>
+                        <div class="box back">
+                            <span class="review-quote"></span>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam suscipit atque accusamus, nobis totam eos?</p>
                         </div>
                     </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="box front">
+                            <img src="/Website Assests/aquaman.jpg"  alt="...">
+                            <h2>Jazmin Lopez</h2>
+                            <h4>star count</h4>
+                        </div>
+                        <div class="box back">
+                            <span class="review-quote"></span>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis dolore vero necessitatibus labore sed cum mollitia fugiat rem incidunt!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="box front">
+                            <img src="/Website Assests/hawkman.jpg"  alt="...">
+                            <h2>Andreya Bryson</h2>
+                            <h4>star count</h4>
+                        </div>
+                        <div class="box back">
+                            <span class="review-quote"></span>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, officiis.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
 </div>
 
