--- a/shop.html
+++ b/shop.html
@@ -41,9 +41,126 @@
     <div class="accent-div"></div>
 
     <!--Banner Section-->
+    <h2>Merch Store</h2>
 
     <!--Filter Section-->
 
-    <!--Item Section-->
+    <!--Merch Section-->
+    <section class="merch-sec">
+      <div class="merch-container" >
+        <div class="row row-cols-1 row-cols-md-2 g-5">
+          <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <img src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="cart-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <img src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="cart-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <img src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="cart-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <img src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="cart-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <img src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="cart-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <img src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="cart-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--Cart Section-->
+    <section class="cart-sec">
+      <h2>Checkout</h2>
+
+      <div class="cart-row">
+        <span class="cart-item cart-header cart-column">Item</span>  
+        <span class="cart-price cart-header cart-column">Price</span> 
+        <span class="cart-quantity cart-header cart-column">Quantity</span>
+      </div>
+
+      <div class="cart-row">
+        <div class="cart-item cart-column">
+          <img src="/Website Assests/flash.jpg" width="100" height="100">
+          <span>Item Name</span>
+        </div>
+        <span class="cart-price cart-column">Price</span>
+      <div class="cart-quantity cart-column">
+        <input type="number" name="" id="" value="1">
+        <button role="button">REMOVE</button>
+      </div>
+    </div>
+
+
+      <div class="cart-row">
+        <div class="cart-item cart-column">
+          <img src="/Website Assests/flash.jpg" width="100" height="100">
+          <span>Item Name</span>
+        </div>
+        <span class="cart-price cart-column">Price</span>
+        <div class="cart-quantity cart-column">
+          <input type="number" name="" id="" value="1">
+          <button role="button">REMOVE</button>
+        </div>
+      </div>
+  
+
+      <hr>
+      <div class="cart-row">
+        <span>PRICE</span>
+        <span>TOTAL PRICE</span>
+      </div>
+      <div class="checkout-btn">
+        <button role="button">PURCHASE</button>
+      </div>
+    </section>
