cart checkout css complete; changed js file name

--- a/shop.html
+++ b/shop.html
@@ -53,9 +53,9 @@
             <div class="card" style="width: 20rem;">
               <div class="card-body">
                 <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Item Name</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
             </div>
@@ -64,9 +64,9 @@
             <div class="card" style="width: 20rem;">
               <div class="card-body">
                 <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Item Name</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
             </div>
@@ -75,9 +75,9 @@
             <div class="card" style="width: 20rem;">
               <div class="card-body">
                 <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Item Name</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
             </div>
@@ -86,9 +86,9 @@
             <div class="card" style="width: 20rem;">
               <div class="card-body">
                 <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Item Name</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
             </div>
@@ -97,9 +97,9 @@
             <div class="card" style="width: 20rem;">
               <div class="card-body">
                 <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Item Name</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
             </div>
@@ -108,9 +108,9 @@
             <div class="card" style="width: 20rem;">
               <div class="card-body">
                 <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Item Name</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
             </div>
@@ -131,36 +131,54 @@
 
       <div class="cart-row">
         <div class="cart-item cart-column">
-          <img src="/Website Assests/flash.jpg" width="100" height="100">
-          <span>Item Name</span>
+          <img src="/Website Assests/flash.jpg" width="100" height="100" class="cart-item-img">
+          <span class="cart-item-title">Item Name</span>
         </div>
         <span class="cart-price cart-column">Price</span>
       <div class="cart-quantity cart-column">
-        <input type="number" name="" id="" value="1">
-        <button role="button">REMOVE</button>
+        <input type="number" name="" id="" value="1" class="quantity-input">
+        <button role="button" class="btn btn-danger quantity-btn">REMOVE</button>
       </div>
     </div>
 
 
       <div class="cart-row">
         <div class="cart-item cart-column">
-          <img src="/Website Assests/flash.jpg" width="100" height="100">
-          <span>Item Name</span>
+          <img src="/Website Assests/flash.jpg" width="100" height="100" class="cart-item-img">
+          <span class="cart-item-title">Item Name</span>
         </div>
         <span class="cart-price cart-column">Price</span>
-        <div class="cart-quantity cart-column">
-          <input type="number" name="" id="" value="1">
-          <button role="button">REMOVE</button>
-        </div>
+      <div class="cart-quantity cart-column">
+        <input type="number" name="" id="" value="1" class="quantity-input">
+        <button role="button" class="btn btn-danger quantity-btn">REMOVE</button>
+      </div>
+    </div>
+  
+      <div class="cart-total">
+        <strong class="cart-total-title">TOTAL :</strong>
+        <span class="cart-total-price">PRICE</span>
       </div>
   
-
-      <hr>
-      <div class="cart-row">
-        <span>PRICE</span>
-        <span>TOTAL PRICE</span>
-      </div>
-      <div class="checkout-btn">
-        <button role="button">PURCHASE</button>
-      </div>
+        <button role="button" class="btn btn-purchase btn-primary">PURCHASE</button>
+    
     </section>
+    <footer>
+      <div class="footer-container">
+          <div class="footer-links">
+              <a href="#">Home</a>
+              <a href="#">Episodes</a>
+              <a href="#">Reviews</a>
+              <a href="#">About</a>
+          </div>
+          <div class="footer-social">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+          </div>
+          <div class="footer-copyright">
+              <p>Copyright &copy; 2022</p>
+          </div>
+      </div>
+  </footer>
+  </body>
