episode list commits

--- a/episode-list.html
+++ b/episode-list.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-<!--navbar-->
+<!--NavBar Section-->
     <nav  id="navbar" class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/landing_page.html">LOGO IMG</a>
@@ -46,44 +46,167 @@
             <h1 class="title">Episode List</h1>
         </div>
     </div>
+
+    <!--Filter Section-->
+  <div class="filter-container">
+    <ul class="filter-wrapper">
+      <li class="filter-item">
+        <a href="#" class="filter-link">All</a>
+      </li>
+      <li class="filter-item">
+        <a href="#" class="filter-link">Monsters</a>
+      </li>
+      <li class="filter-item">
+        <a href="#" class="filter-link">Aliens</a>
+      </li>
+      <li class="filter-item">
+        <a href="#" class="filter-link">Slashers</a>
+      </li>
+    </ul>
+  </div>
+  
+  <div class="search">
+    <form action="#">
+      <input type="search" class="form-control" placeholder="Search">
+      <button type="button" class="btn btn-primary">
+        <i class="fas fa-search"></i>
+      </button>
+    </form>
+  </div>
+
+
+
+
+    <!--Episode Library Section-->
     <div id="episode-card-container">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                    <div class="card-footer">
-                      <small class="text-body-secondary">Last updated 3 mins ago</small>
-                    </div>
-                </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
             </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                <div class="card-footer">
-                      <small class="text-body-secondary">Last updated 3 mins ago</small>
-                </div>
-                </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
             </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    </div>
-                <div class="card-footer">
-                      <small class="text-body-secondary">Last updated 3 mins ago</small>
-                </div>
-                </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
             </div>
-         </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="..."></audio>
+              <button type="button">Go To Episode</button>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Posted </small>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  
     
