--- a/shop.html
+++ b/shop.html
@@ -52,9 +52,9 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Item Name</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Monster Mansion Shirt</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">$24.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
@@ -63,9 +63,9 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Item Name</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Tote Bag</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">$12.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
@@ -74,9 +74,9 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Item Name</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Bumper Sticker Set</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">$7.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
@@ -85,9 +85,9 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Item Name</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Hoodie</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">$29.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
@@ -96,9 +96,9 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Item Name</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Mugs</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">$15.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
@@ -106,10 +106,10 @@
           </div>
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
-              <div class="card-body">
-                <img src="/Website Assests/flash.jpg" alt="">
-                <h5 class="card-title">Item Name</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Price</h6>
+             <div class="card-body">
+                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <h5 class="card-title">Podcast Print</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary card-price">$19.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
                 <button class="cart-btn">Add to Cart</button>
               </div>
@@ -128,37 +128,37 @@
         <span class="cart-price cart-header cart-column">Price</span> 
         <span class="cart-quantity cart-header cart-column">Quantity</span>
       </div>
-
-      <div class="cart-row">
-        <div class="cart-item cart-column">
-          <img src="/Website Assests/flash.jpg" width="100" height="100" class="cart-item-img">
-          <span class="cart-item-title">Item Name</span>
+    <div class="cart-items">
+        <div class="cart-row">
+          <div class="cart-item cart-column">
+            <img src="/Website Assests/flash.jpg" width="100" height="100" class="cart-item-img">
+            <span class="cart-item-title">Monster Mansion Shirt</span>
+          </div>
+          <span class="cart-price cart-column">$24.99</span>
+        <div class="cart-quantity cart-column">
+          <input type="number" name="" id="" value="1" class="quantity-input">
+          <button role="button" class="btn btn-danger quantity-btn">REMOVE</button>
         </div>
-        <span class="cart-price cart-column">Price</span>
-      <div class="cart-quantity cart-column">
-        <input type="number" name="" id="" value="1" class="quantity-input">
-        <button role="button" class="btn btn-danger quantity-btn">REMOVE</button>
       </div>
-    </div>
 
 
-      <div class="cart-row">
-        <div class="cart-item cart-column">
-          <img src="/Website Assests/flash.jpg" width="100" height="100" class="cart-item-img">
-          <span class="cart-item-title">Item Name</span>
+        <div class="cart-row">
+          <div class="cart-item cart-column">
+            <img src="/Website Assests/flash.jpg" width="100" height="100" class="cart-item-img">
+            <span class="cart-item-title">Tote Bag</span>
+          </div>
+          <span class="cart-price cart-column">$12.99</span>
+        <div class="cart-quantity cart-column">
+          <input type="number" name="" id="" value="1" class="quantity-input">
+          <button role="button" class="btn btn-danger quantity-btn">REMOVE</button>
         </div>
-        <span class="cart-price cart-column">Price</span>
-      <div class="cart-quantity cart-column">
-        <input type="number" name="" id="" value="1" class="quantity-input">
-        <button role="button" class="btn btn-danger quantity-btn">REMOVE</button>
       </div>
+    
+        <div class="cart-total">
+          <strong class="cart-total-title">TOTAL :</strong>
+          <span class="cart-total-price">$37.98</span>
+        </div>
     </div>
-  
-      <div class="cart-total">
-        <strong class="cart-total-title">TOTAL :</strong>
-        <span class="cart-total-price">PRICE</span>
-      </div>
-  
         <button role="button" class="btn btn-purchase btn-primary">PURCHASE</button>
     
     </section>
@@ -181,4 +181,5 @@
           </div>
       </div>
   </footer>
+  <script src="/shop.js" ></script>
   </body>
