--- a/landing_page.html
+++ b/landing_page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WCDTaD PODCAST</title>
+    <title>Monster Mansion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/landing_page.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
 <!--navbar-->
     <nav  id="navbar" class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/landing_page.html">LOGO IMG</a>
+          <a class="navbar-brand" href="/landing_page.html">Monster Mansion Podcast</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,9 +29,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/shop.html">SHOP</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
               </li>
             </ul>
           </div>
@@ -49,7 +46,7 @@
       </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="3000">
-        <img src="/Website Assests/New Episode Update demo.png" class="d-block w-100" alt="...">
+        <img src="/Website Assests/Episode Update demo.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img src="/Website Assests/Merch img demo.png" class="d-block w-100" alt="...">
@@ -84,7 +81,7 @@
     <li>
         <div class="panel-wrapper">
             <a href="/shop.html">
-                <img  src="Website Assests/SHOP LINK IMG.png" class="panel-img">
+                <img  src="Website Assests/Shop Link demo.png" class="panel-img">
                 <div class="overlay">
                     <h3 class="panel-text">Merch Shop</h3>
                 </div>
