assest, header, and link changes made to episode and shop pages

--- a/landing_page.html
+++ b/landing_page.html
@@ -71,7 +71,7 @@
     <li>
         <div class="panel-wrapper">
             <a href="/episode-list.html">
-                <img  src="Website Assests/Soundwave-512.webp" class="panel-img">
+                <img  src="Website Assests/Shop Link demo.png" class="panel-img">
                 <div class="overlay">
                     <h3 class="panel-text">Episode List</h3>
                 </div>
@@ -112,16 +112,21 @@
             <p>Subscribe on all platforms where the show is available!</p>
         </div>
         <div class="icon-links">
-            <i class="fa-brands fa-soundcloud"></i>
-            <i class="fa-brands fa-spotify"></i>
-            <i class="fa-solid fa-podcast"></i>
-            <i class="fa-solid fa-square-rss"></i>
+            <a href="https://soundcloud.com/"><i class="fa-brands fa-soundcloud"></i></a>
+            <a href="https://open.spotify.com/"><i class="fa-brands fa-spotify"></i></a> 
+            <a href="https://www.apple.com/apple-podcasts/"><i class="fa-solid fa-podcast"></i></a> 
+            <a href="https://rss.com/?gad_source=1&gclid=EAIaIQobChMIwJih9vS_hgMVCGdHAR3Y8QXPEAAYASAAEgJ0pfD_BwE"><i class="fa-solid fa-square-rss"></i></a>
      </div>
     </div>
 </div>
 
 <!--reviews section-->
 <div class="review-container">
+    <div class="about-host">
+        <h2>Listener Reviews</h2>
+    </div>
+</div>
+<div class="listener-container">
     <div class="carousel-inner">
 
         <div class="carousel-item active">
@@ -129,9 +134,8 @@
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="box front">
-                            <img src="/Website Assests/batman.jpg"  alt="...">
+                            <img src="/Website Assests/Female icon demo.png"  alt="...">
                             <h2>Cherakye Lopez</h2>
-                            <h4>star count</h4>
                         </div>
                         <div class="box back">
                             <span class="review-quote"></span>
@@ -142,9 +146,8 @@
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="box front">
-                            <img src="/Website Assests/Superman.jpg"  alt="...">
+                            <img src="/Website Assests/Male Profile demo.png"  alt="...">
                             <h2>Nelson Reyes</h2>
-                            <h4>star count</h4>
                         </div>
                         <div class="box back">
                             <span class="review-quote"></span>
@@ -155,9 +158,8 @@
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="box front">
-                            <img src="/Website Assests/WonderWoman.jpg"  alt="...">
+                            <img src="/Website Assests/Female icon demo.png"  alt="...">
                             <h2>Sarah Read</h2>
-                            <h4>star count</h4>
                         </div>
                         <div class="box back">
                             <span class="review-quote"></span>
@@ -172,9 +174,8 @@
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="box front">
-                            <img src="/Website Assests/MartianManhunter.jpg"  alt="...">
+                            <img src="/Website Assests/Female icon demo.png"  alt="...">
                             <h2>Deryshelle Crews</h2>
-                            <h4>star count</h4>
                         </div>
                         <div class="box back">
                             <span class="review-quote"></span>
@@ -185,9 +186,8 @@
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="box front">
-                            <img src="/Website Assests/aquaman.jpg"  alt="...">
-                            <h2>Jazmin Lopez</h2>
-                            <h4>star count</h4>
+                            <img src="/Website Assests/Male Profile demo.png"  alt="...">
+                            <h2>Freddy Walker</h2>
                         </div>
                         <div class="box back">
                             <span class="review-quote"></span>
@@ -198,9 +198,8 @@
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="box front">
-                            <img src="/Website Assests/hawkman.jpg"  alt="...">
+                            <img src="/Website Assests/Female icon demo.png"  alt="...">
                             <h2>Andreya Bryson</h2>
-                            <h4>star count</h4>
                         </div>
                         <div class="box back">
                             <span class="review-quote"></span>
@@ -214,18 +213,6 @@
     </div>
 </div>
 
-<!--about bios-->
-<div class="bio-container">
-    <div class="about-host">
-        <h2>About the Host</h2>
-    </div>
-    <div class="bio-wrap">
-        <img src="..." alt="Host Marc">
-        <h3 class="bio-name">Marc Villa</h3>
-        <p class="bio-about"></p>
-    </div>
-</div>
-
 <div class="accent-div"></div>
 
 <footer>
@@ -233,8 +220,7 @@
         <div class="footer-links">
             <a href="#">Home</a>
             <a href="#">Episodes</a>
-            <a href="#">Reviews</a>
-            <a href="#">About</a>
+            <a href="#">Shop</a>
         </div>
         <div class="footer-social">
             <a href="#"><i class="fab fa-facebook"></i></a>
@@ -243,7 +229,7 @@
             <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
         <div class="footer-copyright">
-            <p>Copyright &copy; 2022</p>
+            <p>Copyright &copy; 2024</p>
         </div>
     </div>
 </footer>
