--- a/episode-list.html
+++ b/episode-list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WCDTaD PODCAST</title>
+    <title>Monster Mansion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/episode-list.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,9 +31,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="/shop.html">SHOP</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -43,7 +40,7 @@
 
     <div class="title-container">
         <div class="page-title">
-            <h1 class="title">Episode List</h1>
+            <h2 class="title">Episode Library</h1>
         </div>
     </div>
 
@@ -54,13 +51,16 @@
           <a href="#" class="filter-link">All</a>
         </li>
         <li class="filter-item">
-          <a href="#" class="filter-link">Monsters</a>
+          <a href="#" class="filter-link">Movies</a>
         </li>
         <li class="filter-item">
-          <a href="#" class="filter-link">Aliens</a>
+          <a href="#" class="filter-link">Videogames</a>
         </li>
         <li class="filter-item">
-          <a href="#" class="filter-link">Slashers</a>
+          <a href="#" class="filter-link">Books</a>
+        </li>
+        <li class="filter-item">
+          <a href="#" class="filter-link">Comics</a>
         </li>
       </ul>
     
@@ -83,7 +83,31 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 1.jpg" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Little Shop of Horrors</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
+            </div>
+            <div class="card-footer">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/ep img 2.jpg" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Arachnophobia</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
+            </div>
+            <div class="card-footer">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <a href="#"><img src="/Website Assests/ep img 3.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -96,113 +120,73 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 4.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="..."></audio>
-              <button type="button">Go To Episode</button>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 5.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="..."></audio>
-              <button type="button">Go To Episode</button>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 6.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="..."></audio>
-              <button type="button">Go To Episode</button>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 7.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="..."></audio>
-              <button type="button">Go To Episode</button>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 8.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="..."></audio>
-              <button type="button">Go To Episode</button>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="/Website Assests/ep img 9.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="..."></audio>
-              <button type="button">Go To Episode</button>
+              <audio src="/Website Assests/Cherlopez Theme Final.wav" controls>listen to episode</audio>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="..."></audio>
-              <button type="button">Go To Episode</button>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <a href="#"><img src="/Website Assests/Soundwave-512.webp" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <audio src="..."></audio>
-              <button type="button">Go To Episode</button>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">Posted </small>
             </div>
           </div>
         </div>
@@ -215,10 +199,9 @@
     <footer>
         <div class="footer-container">
             <div class="footer-links">
-                <a href="#">Home</a>
+                <a href="/landing_page.html">Home</a>
                 <a href="#">Episodes</a>
-                <a href="#">Reviews</a>
-                <a href="#">About</a>
+                <a href="/shop.html">Shop</a>
             </div>
             <div class="footer-social">
                 <a href="#"><i class="fab fa-facebook"></i></a>
@@ -227,7 +210,7 @@
                 <a href="#"><i class="fab fa-youtube"></i></a>
             </div>
             <div class="footer-copyright">
-                <p>Copyright &copy; 2022</p>
+                <p>Copyright &copy; 2024</p>
             </div>
         </div>
     </footer>
