--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WCDTaD PODCAST</title>
+    <title>Monster Mansion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/shop.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
 <!--navbar-->
     <nav  id="navbar" class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/landing_page.html">LOGO IMG</a>
+          <a class="navbar-brand" href="/landing_page.html">Monster Mansion Podcast</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,9 +30,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="/shop.html">SHOP</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -40,8 +37,12 @@
 
     <div class="accent-div"></div>
 
-    <!--Banner Section-->
-    <h2>Merch Store</h2>
+    <!--Header Section-->
+    <div class="title-container">
+      <div class="page-title">
+          <h2 class="title">Monster Merch Shop</h1>
+      </div>
+  </div>
 
     <!--Filter Section-->
 
@@ -52,7 +53,7 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <img class="card-img" src="/Website Assests/shirt img.png" alt="">
                 <h5 class="card-title">Monster Mansion Shirt</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">$24.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
@@ -63,7 +64,7 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <img class="card-img" src="/Website Assests/tote bag img.png" alt="">
                 <h5 class="card-title">Tote Bag</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">$12.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
@@ -74,7 +75,7 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <img class="card-img" src="/Website Assests/bumper sticker img.png" alt="">
                 <h5 class="card-title">Bumper Sticker Set</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">$7.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
@@ -85,7 +86,7 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <img class="card-img" src="/Website Assests/hoodie img.png" alt="">
                 <h5 class="card-title">Hoodie</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">$29.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
@@ -96,7 +97,7 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
               <div class="card-body">
-                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <img class="card-img" src="/Website Assests/mug img.png" alt="">
                 <h5 class="card-title">Mugs</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">$15.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
@@ -107,7 +108,7 @@
           <div class="col-md-4">
             <div class="card" style="width: 20rem;">
              <div class="card-body">
-                <img class="card-img" src="/Website Assests/flash.jpg" alt="">
+                <img class="card-img" src="/Website Assests/podcast print img.png" alt="">
                 <h5 class="card-title">Podcast Print</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary card-price">$19.99</h6>
                 <p class="card-text">Some quick example text to build on the Item Name and make up the bulk of the card's content.</p>
@@ -131,7 +132,7 @@
     <div class="cart-items">
         <div class="cart-row">
           <div class="cart-item cart-column">
-            <img src="/Website Assests/flash.jpg" width="100" height="100" class="cart-item-img">
+            <img src="/Website Assests/shirt img.png" width="100" height="100" class="cart-item-img">
             <span class="cart-item-title">Monster Mansion Shirt</span>
           </div>
           <span class="cart-price cart-column">$24.99</span>
@@ -144,7 +145,7 @@
 
         <div class="cart-row">
           <div class="cart-item cart-column">
-            <img src="/Website Assests/flash.jpg" width="100" height="100" class="cart-item-img">
+            <img src="/Website Assests/tote bag img.png" width="100" height="100" class="cart-item-img">
             <span class="cart-item-title">Tote Bag</span>
           </div>
           <span class="cart-price cart-column">$12.99</span>
@@ -162,23 +163,27 @@
         <button role="button" class="btn btn-purchase btn-primary">PURCHASE</button>
     
     </section>
+
+    <div class="accent-div"></div>
+
     <footer>
-      <div class="footer-container">
-          <div class="footer-links">
-              <a href="#">Home</a>
-              <a href="#">Episodes</a>
-              <a href="#">Reviews</a>
-              <a href="#">About</a>
-          </div>
-          <div class="footer-social">
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
-          </div>
-          <div class="footer-copyright">
-              <p>Copyright &copy; 2022</p>
-          </div>
-      </div>
-  </footer>
+        <div class="footer-container">
+            <div class="footer-links">
+                <a href="/landing_page.html">Home</a>
+                <a href="#">Episodes</a>
+                <a href="/shop.html">Shop</a>
+            </div>
+            <div class="footer-social">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+            <div class="footer-copyright">
+                <p>Copyright &copy; 2024</p>
+            </div>
+        </div>
+    </footer>
+
   <script src="/shop.js" ></script>
   </body>
